--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>React App</title>
+    <title>Giant Bug Tracker</title>
     <base href="/" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"  />
     <link rel="stylesheet" href="./styles.css" />
-
-    <script src="https://kit.fontawesome.com/3d34d38138.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="root"></div>
